# mago

./: LICENSE  README.md  pyproject.toml
mago/: mago.py
mago/template/: index.html  logs.html  workers.html
mago/utils/: collector.py  report_generator.py  traffic_manager.py  worker.py
seshat/: seshat.py
seshat/template/: index.html  logs.html  template.js  workers.html
seshat/utils/: collector.py  report_generator.py  worker.py
tests/: test_collector.py  test_traffic_manager.py  test_worker.py
